# cylinders

./: .clang-format  .gitignore  CMakeLists.txt  Color.h  LICENSE.md  Matrix.cpp  Matrix.h  Scene.cpp  Scene.h  Vector.cpp  Vector.h  main.cpp
CameraUtils/: Camera.cpp  Camera.h  Ray.cpp  Ray.h
Lights/: AmbientLight.h  Light.h  PointLight.h
Materials/: Color.h  Material.cpp  Material.h  TableMaterial.cpp  TableMaterial.h
MathUtils/: Matrix.cpp  Matrix.h  Number.cpp  Number.h  Vector.cpp  Vector.h
Objects/: InfiniteCylinder.cpp  InfiniteCylinder.h  Object.cpp  Object.h  Plane.cpp  Plane.h
Utils/: Matrix.cpp  Matrix.h  Number.cpp  Number.h  Scene.cpp  Scene.h  Vector.h
inc/CameraUtils/: Camera.h  Ray.h
inc/Lights/: AmbientLight.h  Light.h  PointLight.h
inc/Materials/: Color.h  Material.h  TableMaterial.h
inc/MathUtils/: Matrix.h  Number.h  Vector.h
inc/Objects/: InfiniteCylinder.h  Object.h  Plane.h
inc/Utils/: Scene.h
src/: main.cpp
src/CameraUtils/: Camera.cpp
src/Materials/: Material.cpp  TableMaterial.cpp
src/MathUtils/: Matrix.cpp  Vector.cpp
src/Objects/: InfiniteCylinder.cpp  Object.cpp  Plane.cpp
src/Utils/: Scene.cpp
